# nott-a-database

./: .gitignore  Cargo.toml  bacon.toml  build-cli.nix  build.nix  default.nix  flake.nix  inputs.nix  migration.sql  shell.nix
.github/workflows/: build-gui.yml  build-test.yml  format.yml  lint.yml  rust.yml
migrations/: V1__initial.sql
nott-a-database/: bun.lockb  eslint.config.js  index.html  node-packages.nix  package.json
nott-a-database-cli/: Cargo.toml
nott-a-database-cli/src/: main.rs
nott-a-database-core/: .gitignore  Cargo.toml  sample_0A.xlsx  sample_0B.xlsx  sample_0C.xlsx  sample_0D.xlsx
nott-a-database-core/migrations/: V1__initial.sql
nott-a-database-core/migrations-async/: 01_initial.sql
nott-a-database-core/src/: award.rs  database.rs  errors.rs  lib.rs  main.rs  marks.rs  resit_aug.rs  spreadsheet_ml.rs
nott-a-database/src/: decrypt.tsx  home.tsx  main.tsx  modules.tsx  settings.tsx  student_info.tsx  students.tsx  upload.tsx
nott-a-database/src-tauri/: Cargo.toml  tauri.conf.json
nott-a-database/src-tauri/capabilities/: default.json
nott-a-database/src-tauri/src/: lib.rs  main.rs
nott-a-database/src/components/ui/: input.tsx  select.tsx  table.tsx
src/: award.rs  database.rs  errors.rs  lib.rs  main.rs  marks.rs  resit_may.rs  spreadsheet_ml.rs
