[package]
name = "nott-a-database"
version = "0.1.0"
edition = "2021"

[dependencies]
calamine = { version = "0.26.1", features = ["dates"] }
chrono = "0.4.38"
quick-xml = { version = "0.37.0", features = ["serialize"] }
refinery = { version = "0.8.14", features = ["rusqlite"] }
rusqlite = "0.31"
serde = { version = "1.0.214", features = ["derive"] }
zip = "2.2.0"
