[package]
name = "nott-a-database-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
calamine = { version = "0.26.1", features = ["dates"] }
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
quick-xml = { version = "0.37.0", features = ["serialize"] }
refinery = { version = "0.8.14", features = ["rusqlite"] }
rusqlite = "0.31"
serde = { version = "1.0.214", features = ["derive"] }
zip = "2.2.0"
