[package]
name = "nott-a-database-core"
version = "0.1.0"
edition = "2021"

[dependencies]
calamine = { version = "0.26.1", features = ["dates"] }
chrono = "0.4.38"
quick-xml = { version = "0.37.0", features = ["serialize"] }
serde = { version = "1.0.214", features = ["derive"] }
zip = "2.2.0"
rusqlite = { version = "0.32.1", optional = true }
sqlx = { version = "0.8.3", features = ["sqlite"], optional = true }

[features]
sync = ["dep:rusqlite"]
async = ["dep:sqlx"]
