[package]
name = "nott-a-database"
version = "0.1.0"
description = ""
authors = ["ecyht2"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nott_a_database_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nott-a-database-core = { path = "../../nott-a-database-core", features = ["async"] }
sqlx = { version = "0.8.3", features = ["migrate", "runtime-tokio", "sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
log = "0.4.25"
tokio = { version = "1.43.0", features = ["sync"] }
libsqlite3-sys = { version = "0.30.1", features = ["bundled-sqlcipher"] }
